# slide-source-mapping

./: AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: .env.example  Dockerfile  docker-compose.yml  main.py  pyproject.toml
app/app/: dependencies.py  ingester.py  retriever.py  summarizer.py
app/config/: schemas.py  settings.py
app/core/: embedder.py  llm.py
app/memory/: milvus_manager.py
app/service/: routes.py
app/utils/: logger.py  pdf_processor.py
scripts/: api_test.sh  test_embedder.py  test_llm.py  test_milvus.py
