[project]
name = "slide-source-mapping-app"
version = "0.1.0"
description = "Slides Source Mapping"
requires-python = ">=3.13"
dependencies = [
    "asyncpg",
    "fastapi",
    "langchain",
    "langchain-community",
    "langchain-core",
    "langchain_groq",
    "langchain_google_genai",
    "langchain-milvus",
    "milvus-lite",
    "nest-asyncio",
    "pydantic-settings",
    "pymilvus",
    "pypdf",
    "python-dotenv",
    "uvicorn"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["config", "core", "memory", "rag", "service", "utils"]
exclude = ["test"]
